# moonlight

./: .gitignore  CMakeLists.txt  README.md  moonlight.sql
language/: moonlight.sql  moonlight.v1.sql  moonlight.v2.0.sql  moonlight.v2.1.sql  moonlight.v2.2.sql
src/: CMakeLists.txt
src/Common/: CMakeLists.txt
src/Common/Abstractions/src/: CMakeLists.txt  EnumDictionary.hpp  Types.cpp  Types.hpp
src/Common/Abstractions/test/: CMakeLists.txt  TestEnums.cpp
src/Common/QueryObject/: CMakeLists.txt  QueryData.hpp  QueryObject.hpp
src/Common/Utils/src/: CMakeLists.txt  Utils.cpp  Utils.hpp
src/Common/Utils/test/: CMakeLists.txt  TestUtils.cpp
src/Common/test/: CMakeLists.txt  TestPrimitives.cpp  TestQueryObject.cpp
src/Parser/src/: CreateParser.cpp  DatabaseParser.cpp  DeleteParser.cpp  DropParser.cpp  IndexParser.cpp  InsertParser.cpp  MigrateParser.cpp  ParsedQueryHelpers.cpp  QueryObject.cpp  QueryParser.cpp  RenameParser.cpp  SchemaFieldParsers.cpp  SchemaParser.cpp  SelectParser.cpp  UpdateParser.cpp  ViewParser.cpp
src/Parser/src/common/: FieldParsers.hpp  QueryParsers.hpp
src/Parser/src/common/api/: Objects.hpp  Parser.hpp  QueryObject.hpp
src/Parser/test/: CMakeLists.txt  CreateParserTest.cpp  DatabaseParserTest.cpp  DeleteParserTest.cpp  DropParserTest.cpp  FieldParserBooleanTest.cpp  FieldParserDateTimeTest.cpp  FieldParserDecimalTest.cpp  FieldParserIntegerTest.cpp  FieldParserReferenceTest.cpp  FieldParserStringTest.cpp  IndexParserTest.cpp  InsertParserTest.cpp  MigrateParserTest.cpp  ParsedQueriesInit.cpp  QueryObjectTest.cpp  RenameParserTest.cpp  SchemaParserTest.cpp  SelectParserTest.cpp  UpdateParserTest.cpp
src/Parser/test/helpers/: ObjectsCompare.hpp  ObjectsInit.hpp
src/Primitives/src/: CMakeLists.txt  Primitives.cpp  Primitives.hpp
src/Primitives/test/: CMakeLists.txt  TestPrimitives.cpp
src/Query/: CMakeLists.txt
src/Query/src/: CMakeLists.txt  CreateParser.cpp  DatabaseParser.cpp  DeleteParser.cpp  DropParser.cpp  IndexParser.cpp  InsertParser.cpp  MigrateParser.cpp  ParsedQueries.hpp  ParsedQueryHelpers.cpp  QueryData.hpp  QueryDataHelpers.cpp  QueryObject.cpp  QueryObject.hpp  QueryParser.cpp  QueryParser.hpp  RegexBuilder.hpp  RenameParser.cpp  SchemaFieldParsers.cpp  SchemaParser.cpp  SelectParser.cpp  UpdateParser.cpp  ViewParser.cpp
src/Query/src/Parsers/: CreateParser.cpp  DatabaseParser.cpp  DeleteParser.cpp  DropParser.cpp  IndexParser.cpp  MigrateParser.cpp  RegexBuilder.cpp  RenameParser.cpp  SchemaFieldParsers.cpp  SchemaFieldParsers.hpp  SchemaParser.cpp  SelectParser.cpp  StructureCreateParser.cpp  StructureDeleteParser.cpp  StructureDropParser.cpp  StructureMigrateParser.cpp  StructureRenameParser.cpp  StructureSelectParser.cpp  StructureUpdateParser.cpp  UpdateParser.cpp  ViewParser.cpp
src/Query/src/common/: ParsedQueries.hpp  QueryObject.hpp  QueryParser.hpp  SchemaFieldParsers.hpp
src/Query/src/helpers/: CreateParser.cpp  DatabaseParser.cpp  DeleteParser.cpp  IndexParser.cpp  InsertParser.cpp  MigrateParser.cpp  ParsedQueryHelpers.cpp  RenameParser.cpp  SchemaFieldParsers.cpp  SchemaFieldParsers.hpp  SchemaParser.cpp  SelectParser.cpp  UpdateParser.cpp  ViewParser.cpp
src/Query/test/: CMakeLists.txt  CreateParserTest.cpp  DatabaseParserTest.cpp  DeleteParserTest.cpp  DropParserTest.cpp  FieldParserBooleanTest.cpp  FieldParserDateTimeTest.cpp  FieldParserDecimalTest.cpp  FieldParserIntegerTest.cpp  FieldParserReferenceTest.cpp  FieldParserStringTest.cpp  IndexParserTest.cpp  InsertParserTest.cpp  MigrateParserTest.cpp  ParsedQueriesInit.cpp  QueryDataEquals.hpp  QueryDataInit.cpp  QueryObjectTest.cpp  RegexCreateMatchTest.cpp  RegexDatabaseMatchTest.cpp  RegexDropMatchTest.cpp  RegexIndexMatchTest.cpp  RegexMigrateMatchParser.cpp  RegexRenameMatchTest.cpp  RegexSchemaMatchTest.cpp  RenameParserTest.cpp  SchemaParserTest.cpp  SelectParserTest.cpp  TestCreateMatch.cpp  TestDatabaseMatch.cpp  TestDropMatch.cpp  TestIndexMatch.cpp  TestMigrateMatch.cpp  TestQueryObject.cpp  TestRenameMatch.cpp  UpdateParserTest.cpp
src/Query/test/helpers/: ParsedQueriesCompare.hpp  ParsedQueriesInit.hpp  QueryDataEquals.hpp  QueryDataInit.hpp
src/Utils/src/: CMakeLists.txt  Utils.cpp  Utils.hpp
src/Utils/test/: CMakeLists.txt  CleanupQueryTest.cpp  EqualsIgnoreCaseTest.cpp  ExtractBooleanTest.cpp  ExtractIdentifierTest.cpp  ExtractValueTest.cpp  IsValidIdentifierTest.cpp  SplitAtCharTest.cpp  TestEqualsIgnoreCase.cpp  TestExtract.cpp  TestExtractValue.cpp  TestTrim.cpp  TrimTest.cpp
src/common/: CMakeLists.txt
src/common/Primitives/src/: CMakeLists.txt  Primitives.cpp  Primitives.hpp
src/common/Primitives/test/: CMakeLists.txt  TestPrimitives.cpp
src/include/: QueryObjects.hpp
syntax/: moonlight.v1.sql  moonlight.v2.sql  types.sql
syntax/moonlight.v2/syntax/: 0.notes.yml  1.types.sql  2.create.sql  concept.sql  initial_demo.sql
syntax/v2-dev/corporate/: create.sql  types.sql
